[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/SettingsMenu.gd" type="Script" id=2]

[node name="SettingsMenu" type="WindowDialog"]
margin_left = 506.0
margin_top = 255.0
margin_right = 796.0
margin_bottom = 403.0
popup_exclusive = true
window_title = "Settings"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="M"]
margin_left = 10.0
margin_top = 10.0
margin_right = 280.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowDestsCheck" type="CheckBox" parent="M/V"]
margin_right = 270.0
margin_bottom = 28.0
text = "Show Legal Move Destinations"

[node name="ShowHighlightsCheck" type="CheckBox" parent="M/V"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 60.0
text = "Highlight Last Move/Check"

[node name="SoundsCheck" type="CheckBox" parent="M/V"]
margin_top = 64.0
margin_right = 270.0
margin_bottom = 92.0
text = "Play Sounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="M/V"]
margin_top = 96.0
margin_right = 270.0
margin_bottom = 124.0
custom_constants/margin_left = 24

[node name="SoundCheckCheck" type="CheckBox" parent="M/V/M"]
margin_left = 24.0
margin_right = 270.0
margin_bottom = 28.0
text = "Play Sound on Check"

[connection signal="toggled" from="M/V/ShowDestsCheck" to="." method="_on_ShowDestsCheck_toggled"]
[connection signal="toggled" from="M/V/ShowHighlightsCheck" to="." method="_on_ShowHighlightsCheck_toggled"]
[connection signal="toggled" from="M/V/SoundsCheck" to="." method="_on_SoundsCheck_toggled"]
[connection signal="toggled" from="M/V/M/SoundCheckCheck" to="." method="_on_SoundCheckCheck_toggled"]
